kubernetes/nextcloud/backup/secret-holder.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: &n nextcloud-backup-secret-holder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *n
  template:
    metadata:
      labels:
        app: *n
    spec:
      serviceAccount: *n
      volumes:
        - name: &s1 nextcloud-data-backup-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: *s1
        - name: &s2 nextcloud-install-backup-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: *s2
      containers:
        - name: *n
          image: busybox:latest
          command: ["sleep", "infinity"]
          volumeMounts:
            - name: *s1
              mountPath: /nextcloud-data-backup-secret
              readOnly: true
            - name: *s2
              mountPath: /nextcloud-install-backup-secret
              readOnly: true
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources: {}
